--- a/OpenWGA/plugins/cm-neo/design/tml/html/bootstrap/mode-select-db.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/bootstrap/mode-select-db.tml
@@ -15,6 +15,8 @@
 		// check if we have only one contentstore
 		var allowedDbKeys = WGA.createList()
 		for(let uid in Iterator(vHost.getAllowedDatabases())){
+			if(uid=="$all")
+				break;;
 			var dbkey = wgaconfig.getByUid(uid).getKey();
 			var Database = AFW.database(dbkey);
 			if(Database.isValid() && Database.isAuthoringAllowed())
