--- a/OpenWGA/plugins/cm-neo/design/scripts/css/dialog.scss
+++ b/OpenWGA/plugins/cm-neo/design/scripts/css/dialog.scss
@@ -196,7 +196,7 @@
 	}
 }
 
-#dialog-settings_content, #dialog-settings_user-defined {
+#dialog-settings_content, #dialog-settings_user-defined, #dialog-create-page_child, #dialog-create-page_root {
 	width: 900px;
 	margin-left: -450px;
 }
