--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/create-page/child.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/create-page/child.tml
@@ -23,6 +23,25 @@
 			}
 		}
 		
+		// remove form-fields als store-in-content
+		tmlform.removefield("title")
+		tmlform.removefield("position")
+		tmlform.removefield("contenttype")
+		tmlform.removefield("language")
+		tmlform.removefield("template")
+
+		for(let [index, handler] in App.settingsSaveHandler){
+			try{
+				handler.call(context(doc), tmlform);
+			}
+			catch(e){
+				console.log(e);
+			}		
+		}
+		App.settingsSaveHandler=[];
+		
+		tmlform.storeincontent(doc)
+				
 		portlet.fireevent("close-dialog", {
 			redirectto: context(doc).contenturl()
 		})
@@ -33,6 +52,7 @@
 	_opts = option("dialog_options")
 	setOption("current_lang", LANGUAGE);
 	setOption("current_pagetype", CONTENTTYPE);
+	App.settingsSaveHandler=[];
 </tml:script>
 
 <tml:form id="form-create-page" source="portlet" context="[$struct:{_opts.parent || document.getStructKey()}]">
@@ -44,8 +64,8 @@
 
 	<div class="content form-horizontal">
 
-		<tml:[::form]/>
-		<hr>
+		<tml:comment><tml:[form-messages] o_title="Seite kann nicht erstellt werden"/></tml:comment>
+		
 		<tml:[form-field] o_label="Erstellen unter" o_mode="view">
 			<tml:script encode="html">
 				var c = context("docid:"+document.getStructKey(), false)
@@ -56,7 +76,10 @@
 		</tml:[form-field]>
 		<tml:case condition="document.hasChildren()">
 			<tml:[form-field] o_label="Position" o_name="position" o_type="select" o_options="Am Anfang der Liste|start,Am Ende der Liste|end"/>
-		</tml:case> 
+		</tml:case>
+		<tml:[::form]/>
+		<tml:include ref="::required-settings" o_page="child"/>
+		 
 	</div>
 
 	<div class="footer">
