--- a/OpenWGA/plugins/cm-neo/design/tml/html/util/file-info.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/util/file-info.tml
@@ -7,7 +7,7 @@
 		_url = attachment.getThumbnailURL();
 		_type = WGA.design().label("filetype.single."+attachment.getType().name);
 		_size = AFW.Util.renderFileSize(file.getSize());
-		_date = file.getLastmodified()
+		_date = WGA.format(file.getLastmodified(), "mediumDateTime", "de")
 		_mimetype = file.getMimeType()					
 	}					
 </tml:script>
