#00005675: ask for language

--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/edit-rtf-link.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/edit-rtf-link.tml
@@ -19,6 +19,12 @@
 	tmlform.key=null;
 </tml:action>
 
+<tml:action id="app-changed">
+	tmlform.removefield("lang")
+	tmlform.removefield("container")
+	tmlform.removefield("filename")
+</tml:action>
+
 <tml:form id="edit-rtf-link">
 
 	<div class="header">
@@ -64,6 +70,7 @@
 					WGA.TMLPage.setVar("_dbs", CMM.getDbKeys());
 					_dbs.add(0, "- aktuelle App -|this");
 					_dbkey = "this";
+					_lang = LANGUAGE;
 					if($option_dialog_options.key && !tmlform.submitted){
 						var parts = $option_dialog_options.key.split("/");
 						if(parts.length==3){
@@ -76,17 +83,31 @@
 							_filename = parts[1];
 							_dbkey = "this"
 						}
-						_container = _container.split(".")[0]		// ensure _container is structkey
+						parts = _container.split(".")
+						_container = parts[0];
+						if(parts.length>1)
+							_lang = parts[1];
 					}
+					
+					var database = db()
+					if(tmlform.dbkey && tmlform.dbkey!="this")
+						database = db(tmlform.dbkey)
+					WGA.TMLPage.setVar("_langs", database.getLanguages().keySet());
+					
+					if(!_langs.contains(_lang))
+						_lang = _langs.iterator().next();
+					
 				</tml:script>
 				
-				<tml:[form-field] o_label="App" o_name="dbkey" o_default="{_dbkey}" o_type="select" o_optionsitem="_dbs" o_changeaction="$refresh"/>
+				<tml:[form-field] o_label="App" o_name="dbkey" o_default="{_dbkey}" o_type="select" o_optionsitem="_dbs" o_changeaction="app-changed"/>
+				<tml:[form-field] o_label="Sprache" o_name="lang" o_default="{_lang}" o_type="select" o_optionsitem="_langs" o_changeaction="$refresh"/>
 
 				<tml:[form-field] o_label="Dokument">
-					<tml:include ref="util:select-document" o_fieldname="container" o_default="{_container}" o_dbkey="{tmlform.dbkey=='this'?VOID:tmlform.dbkey}">
-						<tml:option name="changeaction"><tml:action>
-							tmlform.removeField("filename")
-						</tml:action></tml:option>
+					<tml:include ref="util:select-document" o_fieldname="container" o_default="{_container}" 
+							o_dbkey="{tmlform.dbkey=='this'?VOID:tmlform.dbkey}" 
+							o_language="{tmlform.lang}"
+					>
+						<<tml:option name="changeaction"><tml:action ref="$refresh"/></tml:option>
 					</tml:include>
 				</tml:[form-field]>
 
@@ -94,7 +115,7 @@
 					<tml:script>
 						_ctx = (tmlform.dbkey=='this' ? "" : "db:"+tmlform.dbkey + "/")
 							+ "docid:" + tmlform.container
-							+ "<" + LANGUAGE + ">"
+							+ "<" + tmlform.lang + ">"
 					</tml:script>
 					<tml:if context="{_ctx}" iscontextvalid="true">
 						<tml:then>
@@ -103,8 +124,8 @@
 							</tml:[form-field]>
 						</tml:then>
 						<tml:else>
-							<tml:[form-field] o_label="Datei" o_mode="view">
-								<p style="color:red">Die ausgewählte Seite ist in der Sprache '<tml:meta name="languagetitle"/>' nicht verfügbar.</p>
+							<tml:[form-field] o_mode="view">
+								<p style="color:red">Die Seite ist in der Sprache '<tml:item name="lang" type="tmlform"/>' nicht verfügbar.</p>
 							</tml:[form-field]>
 						</tml:else>
 					</tml:if>
@@ -183,6 +204,7 @@
 				var dbkey = $("[name=dbkey]", form).val();
 				var container = $("[name=container]", form).val();
 				var filename = $("[name=filename]", form).val();
+				var lang = $("[name=lang]", form).val();
 				if(!filename){
 					alert("Bitte wählen Sie eine Datei aus.");
 					return;
@@ -190,7 +212,7 @@
 				a = editor.createLink(filename, filename, "extfile");
 				editor.setURLInfo(a, {
 					type: type,
-					key: container+".<tml:meta name="language"/>.0/"+filename 
+					key: container+"." + lang + ".0/"+filename 
 							+ (dbkey=="this" ? "" :  "/"+dbkey)
 				})
 			}
@@ -262,13 +284,14 @@
 				var dbkey = $("[name=dbkey]", form).val();
 				var container = $("[name=container]", form).val();
 				var filename = $("[name=filename]", form).val();
+				var lang = $("[name=lang]", form).val();
 				if(!filename){
 					alert("Bitte wählen Sie eine Datei aus.");
 					return;
 				}
 				editor.setURLInfo(a, {
 					type: type, 
-					key: container+".<tml:meta name="language"/>.0/"+filename
+					key: container+"." + lang + ".0/"+filename
 							+ (dbkey=="this" ? "" :  "/"+dbkey)
 				})
 			}
